--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -39,6 +39,6 @@ body{
 }
 
 ::-webkit-scrollbar-thumb{
-  background-color: #000000;
+  background-color: #dfdfdf;
   border-radius: 10px;
 }
