--- a/src/sass/chatMessage.scss
+++ b/src/sass/chatMessage.scss
@@ -6,7 +6,7 @@
   margin-bottom: 7px;
 }
 
-#chat-history .message p{
+#chat-history .message pre{
   text-align: left;
   padding: 1%;
   box-sizing: border-box;
