--- a/src/sass/chatPage.scss
+++ b/src/sass/chatPage.scss
@@ -41,16 +41,21 @@
 #chat-history{
   width: 100%;
   height: calc(100% - 9em);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-start;
+  overflow-y: auto;
+
+  #chat-history-container{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+  }
 }
 
 #chat-inputs{
   width: 100%;
-  height: 3.5em;
-  overflow: visible;
+  height: 4em;
 }
 
 #message-input{
